k8s/ecuacion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecuacion-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecuacion
  template:
    metadata:
      labels:
        app: ecuacion
    spec:
      containers:
      - name: ecuacion
        image: docker.io/library/ecuacion:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ecuacion-service
spec:
  selector:
    app: ecuacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30003
  type: NodePort
