k8s/resta-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resta-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resta
  template:
    metadata:
      labels:
        app: resta
    spec:
      containers:
      - name: resta
        image: docker.io/library/resta:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: resta-service
spec:
  selector:
    app: resta
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30002
  type: NodePort
