k8s/storage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
      - name: storage
        image: docker.io/library/storage:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: storage-service
spec:
  selector:
    app: storage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30004
  type: NodePort
