k8s/suma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suma-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: suma
  template:
    metadata:
      labels:
        app: suma
    spec:
      containers:
      - name: suma
        image: docker.io/library/suma:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: suma-service
spec:
  selector:
    app: suma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30001
  type: NodePort
